--- a/templates/function.html
+++ b/templates/function.html
@@ -43,7 +43,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         varshini,XI-D.
-        <br><a href="file:///home/sudo-ranjith/Documents/tests/thrd_ques/candidate-python-exercise-master/home.html">
+        <br><a href="home.html">
             <button>home
 
             </button>
