--- a/templates/personal.html
+++ b/templates/personal.html
@@ -21,12 +21,8 @@
         <br>thankyou,</br>
         <br>vidhya varshini,
         <br>vidhvar
-        <br><a href="file:///home/sudo-ranjith/Documents/tests/thrd_ques/candidate-python-exercise-master/home.html">
-            <button>
-                home
-            </button>
-        </a>
-
+        <br>
+        <a href="{{ url_for('home') }}">Index<button>home</button></a>
 
 
     </body>
