--- a/templates/stomach.html
+++ b/templates/stomach.html
@@ -19,9 +19,8 @@
         <br>your obediently,
         <br>kaviya
 
-        <br><a href="file:///home/sudo-ranjith/Documents/tests/thrd_ques/candidate-python-exercise-master/home.html">
-            <button>home</button>
-        </a>
+        <br>
+        <a href="{{ url_for('home') }}">Index<button>home</button></a>
     </body>
 
 </html>
